syntax = "proto3";

package authorization.v1;

option go_package = "github.com/ekkx/tcmrsv-web/server/pkg/api/v1/authorization";

service AuthorizationService {
    rpc Authorize(AuthorizeRequest) returns (AuthorizeReply);
    rpc Reauthorize(ReauthorizeRequest) returns (ReauthorizeReply);
}

message Authorization {
    string access_token = 1;
    string refresh_token = 2;
}

message AuthorizeRequest {
    string user_id = 1;
    string password = 2;
}

message AuthorizeReply {
    Authorization authorization = 1;
}

message ReauthorizeRequest {
    string refresh_token = 1;
}

message ReauthorizeReply {
    Authorization authorization = 1;
}
